add third-party bootstrap4

--- a/stonemaker3/src/app/app.component.html
+++ b/stonemaker3/src/app/app.component.html
@@ -8,4 +8,18 @@
 <h2>Here are some links to help you start: </h2>
 <h1>batman was here</h1>
 
+<alert type="success">hello bootstrap</alert>
+
+<carousel>
+  <slide>
+    <img src="https://placeimg.com/640/480/tech" alt="first slide" style="display: block; width: 100%;">
+  </slide>
+  <slide>
+    <img src="https://placeimg.com/640/480/nature" alt="second slide" style="display: block; width: 100%;">
+  </slide>
+  <slide>
+    <img src="https://placeimg.com/640/480/people" alt="third slide" style="display: block; width: 100%;">
+  </slide>
+
+
 <router-outlet></router-outlet>
