add content to portfolio

--- a/stonemaker3/src/app/portfolio/portfolio.component.html
+++ b/stonemaker3/src/app/portfolio/portfolio.component.html
@@ -1,3 +1,157 @@
-<p>
-  portfolio works!
-</p>
+<div class="container">
+    <alert type="success"> portfolio works!</alert>
+    
+      <div class="container-fluid ">
+          <div class="">
+              <h1 class="display-4">Hello, {{ title }}!</h1>
+              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <hr class="my-4">
+              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+              
+              <alert type="success"> hello bootstrap</alert>
+      </div>
+
+<section>
+  <!-- 1 -->
+    <div class="row jumbotron">
+       
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633481" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://infinitelighthomes.com" target="_blank"class="btn btn-primary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303631628" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://guitarlessonmiami.com" target="_blank"class="btn btn-primary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633859" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://ilighthomes.com" target="_blank"class="btn btn-primary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+     
+      </div>
+<!-- 2 -->
+<div class="row jumbotron">
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303623596" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://gokcb.com" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303630589" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://mystarschool.com" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://homebuyersbid.com" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+</div>
+<!-- 3 -->
+<div class="row jumbotron">
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303640870" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://iamwenrock.com" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h32ZPFUBhTA" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://github.com/anotherjung/learnMEAN15_fullquestions" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://homebuyersbid.com" target="_blank"class="btn btn-primary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+</div>
+
+
+
+    </section>
+
+
+
+    
+
+    
+
+
+    
+        <h1></h1>
+      </div>
+    </div>
