--- a/stonemaker3/src/app/about/about.component.html
+++ b/stonemaker3/src/app/about/about.component.html
@@ -1,3 +1,28 @@
-<p>
-  about works!
-</p>
+<div class="container-fluid">
+    <alert type="success"> about works!</alert>
+    
+      <div class="container-fluid">
+          <div class="jumbotron">
+              <h1 class="display-4">Hello, {{ title }}!</h1>
+              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <hr class="my-4">
+              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+              <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+              </p>
+              <alert type="success"> hello bootstrap</alert>
+            </div>
+            <carousel>
+                <slide>
+                  <img src="https://placeimg.com/640/480/tech" alt="first slide" style="display: block; width: 100%;">
+                </slide>
+                <slide>
+                  <img src="https://placeimg.com/640/480/nature" alt="second slide" style="display: block; width: 100%;">
+                </slide>
+                <slide>
+                  <img src="https://placeimg.com/640/480/people" alt="third slide" style="display: block; width: 100%;">
+                </slide>
+              </carousel>
+        <h1></h1>
+      </div>
+    </div>
