--- a/stonemaker3/src/app/resume/resume.component.html
+++ b/stonemaker3/src/app/resume/resume.component.html
@@ -1,28 +1,74 @@
-<div class="container-fluid">
+<div class="container" >
     <alert type="success"> resume works!</alert>
-    
-      <div class="container-fluid">
-          <div class="jumbotron">
+            
+      <div class="container-fluid ">
+          <div class="">
               <h1 class="display-4">Hello, {{ title }}!</h1>
-              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <p class="lead">A system thinker with nine years experience in online advertising specialized in mobile and video distribution. Skilled in ad-server tags, marketing analytics, and data integrity. Currently, exploring opportunities implementing technologies & data mining for a growing team. 
+                </p>
               <hr class="my-4">
-              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-              </p>
-              <alert type="success"> hello bootstrap</alert>
+              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>              
             </div>
-            <carousel>
-                <slide>
-                  <img src="https://placeimg.com/640/480/tech" alt="first slide" style="display: block; width: 100%;">
-                </slide>
-                <slide>
-                  <img src="https://placeimg.com/640/480/nature" alt="second slide" style="display: block; width: 100%;">
-                </slide>
-                <slide>
-                  <img src="https://placeimg.com/640/480/people" alt="third slide" style="display: block; width: 100%;">
-                </slide>
-              </carousel>
+
+            <div class=" jumbotron">
+          
+              
+            <table class="table ">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                   
+                    <th scope="col">Company</th>
+                    <th scope="col">Location</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row"></th>
+                    
+                    <td>Immersion Corp</td>
+                    <td>San Jose, California</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"></th>
+                  
+                    <td>PulsePoint</td>
+                    <td>San Francisco, California</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"></th>
+                   
+                    <td>LiquidM</td>
+                    <td>Remote, Califronia</td>
+                  </tr>
+                  <tr>
+                      <th scope="row"></th>
+              
+                      <td>Amobee</td>
+                      <td>Redwood City, California</td>
+                    </tr>
+                    <tr>
+                        <th scope="row"></th>
+                        <td>Velti</td>
+                        <td>Palo Alto, California</td>
+                      </tr>
+                      <tr>
+                          <th scope="row"></th>
+                          <td>Mocean Mobile</td>
+                          <td>Soho, New York</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"></th>
+                            <td>IAC</td>
+                            <td>Chelsea, New York</td>
+                          </tr>
+                </tbody>
+              </table>
+              
         <h1></h1>
+        
       </div>
+      <p class="lead">
+          <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jungno?trk=profile-badge" target="_blank" role="button">Linkedin Profile</a>
+        </p>
     </div>
