--- a/stonemaker3/src/app/portfolio/portfolio.component.html
+++ b/stonemaker3/src/app/portfolio/portfolio.component.html
@@ -1,45 +1,19 @@
 <div class="container">
-    <alert type="success"> portfolio works!</alert>
+      <alert type="success"> {{ title }} works!</alert>
     
-      <div class="container-fluid ">
-          <div class="">
-              <h1 class="display-4">Hello, {{ title }}!</h1>
-              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-              <hr class="my-4">
-              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              
-              <alert type="success"> hello bootstrap</alert>
+    <div class="container-fluid ">
+        <div class="jumbotron">
+            <h2 class="display-5">Abundance is not something we acquire.  It is someting we tune into.</h2>
+              <p class="lead">Welcome friend. Currently developing Angular Websites on Firebase (Google Cloud Services) and integrate third-parties for Advertising focused projects. Thanks for your interest.  </p>
+              <p>I enjoy working with healthy happy people. Let's connect.  Here is my <a class="badge badge-primary" [routerLink]="['../contact']" role="button">Contact</a>.</p>
+              <hr class="my-4"> 
+              <p>My previous work experience was using Javascript and NodeJS on AWS (Amazon Web Services).  Mostly for Advertising Technology Companies, which are not available here. Feel free to check out my <a class="badge badge-secondary" [routerLink]="['../resume']" role="button">Resume</a>. </p>
       </div>
 
+<!-- embeds -->
 <section>
   <!-- 1 -->
-    <div class="row jumbotron">
-       
-        <div class="col">
-            <div class="card">
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633481" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                  </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://infinitelighthomes.com" target="_blank"class="btn btn-primary">Go Website</a>  
-                </div>
-              </div>
-        </div>
-
-        <div class="col">
-            <div class="card">
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303631628" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                  </div>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://guitarlessonmiami.com" target="_blank"class="btn btn-primary">Go Website</a>  
-                </div>
-              </div>
-        </div>
+    <div class="jumbotron row">
 
         <div class="col">
             <div class="card">
@@ -47,28 +21,43 @@
                     <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633859" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                   </div>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="https://ilighthomes.com" target="_blank"class="btn btn-primary">Go Website</a>  
+                  <h5 class="card-title">I Light Homes</h5>
+                  <p class="card-text">Ilighthomes.com is Angular6 website powered by Firebase using Bootstrap4.  Design Templates by Creative-Tim.  </p>
+                  <a href="https://ilighthomes.com" target="_blank"class="btn btn-secondary">Go Website</a>  
                 </div>
               </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Home Buyers Bid</h5>
+                  <p class="card-text">Homebuyersbid.com is Angular6 website powered by Firebase using Bootstrap4.   Design Templates by Creative-Tim.</p>
+                  <a href="https://homebuyers.bid" target="_blank"class="btn btn-secondary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <div class="embed-responsive embed-responsive-1by1">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303633481" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  </div>
+                <div class="card-body">
+                  <h5 class="card-title">Infinite Light Homes</h5>
+                  <p class="card-text">Infinitelighthomes.com is Angular6 website powered by Firebase using Bootstrap4.  Form powered by Firestore and has two integrations.  First, Email Marketing Platform by SendGrid.  Second, Customer Relation Management by Airtable. Design Templates by Creative-Tim.  </p>
+                  <a href="https://infinitelighthomes.com" target="_blank"class="btn btn-secondary">Go Website</a>  
+                </div>
+              </div>
+        </div>
+
+        
      
       </div>
 <!-- 2 -->
-<div class="row jumbotron">
-    <div class="col">
-        <div class="card">
-            <div class="embed-responsive embed-responsive-1by1">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303623596" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://gokcb.com" target="_blank"class="btn btn-primary">Go Website</a>  
-            </div>
-          </div>
-    </div>
+<div class="jumbotron row">
+
 
     <div class="col">
         <div class="card">
@@ -77,9 +66,9 @@
 
               </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://mystarschool.com" target="_blank"class="btn btn-primary">Go Website</a>  
+              <h5 class="card-title">My Star School</h5>
+              <p class="card-text">Mystarschool.com is Angular6 website powered by Firebase using Bootstrap4.  Form powered by Firestore and has two integrations.  First, Email Marketing Platform by SendGrid.  Second, Customer Relation Management by Airtable. Design Templates by Creative-Tim.  </p>
+              <a href="https://mystarschool.com" target="_blank"class="btn btn-secondary">Go Website</a>  
             </div>
           </div>
     </div>
@@ -87,27 +76,41 @@
     <div class="col">
         <div class="card">
             <div class="embed-responsive embed-responsive-1by1">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303631628" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
               </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://homebuyersbid.com" target="_blank"class="btn btn-primary">Go Website</a>  
+              <h5 class="card-title">Guitar Lesson Miami</h5>
+              <p class="card-text">Guitarlessonmiami.com is Angular6 website powered by Firebase using Bootstrap4.  Form powered by Firestore and has two integrations.  First, Email Marketing Platform by SendGrid.  Second, Customer Relation Management by Airtable. Design Templates by Creative-Tim.  </p>
+              <a href="https://guitarlessonmiami.com" target="_blank"class="btn btn-secondary">Go Website</a>  
             </div>
           </div>
     </div>
+
 </div>
 <!-- 3 -->
-<div class="row jumbotron">
+<div class="jumbotron row">
     <div class="col">
         <div class="card">
             <div class="embed-responsive embed-responsive-1by1">
                 <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303640870" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
               </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://iamwenrock.com" target="_blank"class="btn btn-primary">Go Website</a>  
+              <h5 class="card-title">I Am Wenrock</h5>
+              <p class="card-text">Iamwenrock.com is Angular6 website powered by Firebase using Bootstrap4.  Photo images are compressed using webp and jpg format.  Video content is third-party embeds from Facebook, Youtube, and Vimeo.   Design Templates by Creative-Tim.  </p>
+              <a href="https://iamwenrock.com" target="_blank"class="btn btn-secondary">Go Website</a>  
+            </div>
+          </div>
+    </div>
+
+    <div class="col">
+        <div class="card">
+            <div class="embed-responsive embed-responsive-1by1">
+                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303623596" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            <div class="card-body">
+              <h5 class="card-title">Go KCB</h5>
+              <p class="card-text">Gokcb.com is HTML5/CSS/JavaScript website powered by NodeJS on AWS Elastic Beanstalk.   The form is powered by DyanmoDB was used for the database.  </p>
+              <a href="https://www.gokcb.com" target="_blank"class="btn btn-secondary">Go Website</a>  
             </div>
           </div>
     </div>
@@ -119,39 +122,19 @@
 
               </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://github.com/anotherjung/learnMEAN15_fullquestions" target="_blank"class="btn btn-primary">Go Website</a>  
+              <h5 class="card-title">Answer Yo Questions</h5>
+              <p class="card-text">Answer Yo Questions is Angular1 website powered by NodeJS on AWS EC2.  MongoDB or DyanmoDB was used for the database.  Design Template by Material Designs.</p>
+              <a href="https://github.com/anotherjung/learnMEAN15_fullquestions" target="_blank"class="btn btn-secondary">Go Website</a>  
             </div>
           </div>
     </div>
 
-    <div class="col">
-        <div class="card">
-            <div class="embed-responsive embed-responsive-1by1">
-                <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/303620026" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://homebuyersbid.com" target="_blank"class="btn btn-primary">Go Website</a>  
-            </div>
-          </div>
-    </div>
+
 </div>
+</section>
 
-
-
-    </section>
-
-
-
-    
-
-    
-
-
-    
-        <h1></h1>
       </div>
-    </div>
+      <p class="lead">
+          <a class="btn btn-secondary btn-lg ml-2 mt-2" [routerLink]="['../resume']" role="button">Resume</a>
+        </p>
+</div>
